# RawOpenGL

res/shaders/: basic.shader  copyrotationbasic.shader  matrixbasic.shader  rotationbasic.shader  simplebasic.shader
src/: CMakeLists.txt  IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shader.cpp  VertexBuffer.cpp  VertexBuffer.h  application.cpp  callback_functions.h  window_params.h
src/dependencies/stb_image/: CMakeLists.txt
